# whirlwind

./: .gitignore  .whirlwind_history  README.md  config.yaml  experiment-overviews  experiment-summaries  pixi.toml  pyproject.toml
440c7/: manifest.csv
artifacts/manifest/: ca4e6100-942d-556f-aada-495aa90af2eb.parquet
assets/: DO.md  injester.yaml  testtif.tif
config/: injester.yaml
legacy/: README.md  \  readme.lyx  remoteclip_ex.py  samtest.py  semantic_classifier.py  stitch_test.py  v4_spec.md
legacy/NOTES/: notes.py
legacy/commands/: base.py  ingest.py  inspect.py
legacy/commands_3/: base.py  inspect.py  wrangle.py
legacy/config/: __init__.py  defaults.py
legacy/config_/: defaults.py  schema.py
legacy/core/: app.py  shell.py
legacy/core_/: __init__.py
legacy/core_3/: app.py
legacy/experiments/: config_grid.py  ingest_experiment.py
legacy/filetrees/: __init__.py  files.py  mosaicbranch.py
legacy/geometry/: __init__.py  mosaic.py
legacy/ingest/: runner.py
legacy/interfaces/: rasters.py
legacy/io/: manifests.py  metadata.py
legacy/lab/: config_grid.py  timer.py
legacy/logic/: raid.py  toolbox.py
legacy/manifests/: __init__.py  (+2 more)
logs/: VERSION
metadata/: scan_8afbf1afd751.csv  scan_8d12397edeba.csv  scan_e59ccae7c704.csv  scan_metadata_283e05ce229a.csv  scan_metadata_39ec6496e744.csv  scan_metadata_3d31e09cc4b2.csv  scan_metadata_3e7bf47091b9.csv  scan_metadata_64679d746192.csv  scan_metadata_8d12397edeba.csv  scan_metadata_901f06fad056.csv  scan_metadata_e59ccae7c704.csv
scripts/: check_matching_npy.py  hash_test.py
(+371 files in other folders)
