[build-system]
requires = ["setuptools>=68","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whirlwind"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = ["rich>=13"]

[project.scripts]
whirlwind = "whirlwind.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where=["src"]
